# AAS---Paper---MNRAS

./: CMakeLists.txt  main.tex  references.bib
benchmarks/cpp/: CMakeLists.txt  benchmark_long_term_v2.cpp
benchmarks/python/: compose_results.py  diagnose_ias15.py  ias15_rebound_benchmark.py
data/benchmark_results/: initial_states_mjd60310.csv  long_term_tests.csv
figures/: README.md  plot_all.py  plot_benchmarks.py  plot_divergence.py  plot_efficiency.py  plot_energy.py  plot_horizons_short.py  plot_horizons_validation.py  plot_long_term.py  plot_shadow.py  plot_steps.py  plot_stm.py  plot_uncertainty.py
paper/: main.tex
paper/sections/: 01_introduction.tex  02b_symplecticity_proof.tex  02c_time_reversal_proof.tex  04_benchmarks.tex  06_conclusions.tex  acknowledgments.tex  contributions.tex  macros.tex
sections/: 01_introduction.tex  02_method.tex  02a_extended_phase_space.tex  02d_order_and_shadow.tex  02e_hessian_step_function.tex  03_stm.tex  03_stm_extended.tex  04_benchmarks.tex  05_discussion.tex  06_conclusions.tex  HOW_TO_INTEGRATE.md  abstract.tex
tables/: tab_elements.tex
